--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     },
     "require": {
         "php": "^7.3 || ^8.0",
-        "ext-json": "*"
+        "ext-json": "*",
+        "ext-curl": "*"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.6"
@@ -33,7 +34,10 @@
             "CAP\\interfaces\\helpers\\" : "src/includes/interfaces/helpers",
             "CAP\\interfaces\\http\\" : "src/includes/interfaces/http",
             "CAP\\http\\" : "src/includes/http",
-            "CAP\\helpers\\" : "src/includes/helpers"
+            "CAP\\helpers\\" : "src/includes/helpers",
+            "CAP\\endpoint\\" : "src/includes/endpoints",
+            "CAP\\metaboxes\\" : "src/admin/Metaboxes",
+            "CAP\\shortcode\\" : "src/includes/shortcode"
         }
     }
 }
